Fixing rendering of section or default entry form

--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -54,7 +54,7 @@
         </div>
         <div *ngIf="!isLoading">
 
-          <div *ngIf="dataEntryFormDesign && dataEntryFormDesign != '' ">
+          <div *ngIf="entryFormType && entryFormType == 'CUSTOM'">
 
 
             {{ dataEntryFormDesign }}
@@ -62,7 +62,7 @@
 
 
           </div>
-          <div *ngIf="dataEntryFormDesign && dataEntryFormDesign == '' ">
+          <div *ngIf="entryFormType && entryFormType != 'CUSTOM'">
             <div *ngIf="entryFormSections && entryFormSections.length == 0">
               <empty-list-notification [emptyListMessage]="translationMapper['The is no field associated with this entry form, Please contact our help desk'] "></empty-list-notification>
             </div>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="item-card">
-            <ion-row *ngIf="entryFormSections.length > 1 && dataEntryFormDesign && dataEntryFormDesign == '' ">
+            <ion-row *ngIf="entryFormSections.length > 1 && entryFormType && entryFormType != 'CUSTOM'">
               <ion-col col-2 col-sm-1 (click)="changePagination(pager.page - 1)" padding-left padding-bottom padding-top>
                 <ion-icon name="ios-arrow-back-outline"></ion-icon>
               </ion-col>
@@ -120,7 +120,7 @@
               </ion-col>
             </ion-row>
 
-            <ion-row *ngIf="entryFormSections.length == 1 || (dataEntryFormDesign && dataEntryFormDesign != '') ">
+            <ion-row *ngIf="entryFormSections.length == 1 || (entryFormType && entryFormType == 'CUSTOM') ">
               <ion-col col-6 col-sm-6>
                 <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted" (tap)="updateDataSetCompleteness()">
                   <span [translate]="'Complete'"></span>
