--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -55,12 +55,7 @@
         <div *ngIf="!isLoading">
 
           <div *ngIf="entryFormType && entryFormType == 'CUSTOM'">
-
-
-            {{ dataEntryFormDesign }}
-
-
-
+            <custom-data-entry-form [dataEntryFormDesign]="dataEntryFormDesign"></custom-data-entry-form>
           </div>
           <div *ngIf="entryFormType && entryFormType != 'CUSTOM'">
             <div *ngIf="entryFormSections && entryFormSections.length == 0">
