feat(custom data entry): Added support to include default inline scripts
Added support to include inline javascripts that will format the form accordingly and add data
values to it

--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -55,7 +55,7 @@
         <div *ngIf="!isLoading">
 
           <div *ngIf="entryFormType && entryFormType == 'CUSTOM'">
-            <custom-data-entry-form [dataEntryFormDesign]="dataEntryFormDesign"></custom-data-entry-form>
+            <custom-data-entry-form [dataEntryFormDesign]="dataEntryFormDesign" [data]="dataValuesObject"></custom-data-entry-form>
           </div>
           <div *ngIf="entryFormType && entryFormType != 'CUSTOM'">
             <div *ngIf="entryFormSections && entryFormSections.length == 0">
