--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
   <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
 
   <script src="assets/library/reportModule.js"></script>
+  <script src="assets/library/dataEntryModule.js"></script>
   <script src="assets/library/dhis2/dhis2.util.js"></script>
   <script src="assets/library/dhis2/dhis2.period.js"></script>
   <script>
