Fixing control for download and saving processes using queue manager

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,6 +29,15 @@
             </ion-item>
           </ion-list>
         </div>
+        <div *ngIf="downloadingQueueManager">
+          completedTrackedProcess :: {{ completedTrackedProcess|json }}
+          <br>
+          <br> savingingQueueManager :: {{ savingingQueueManager.denqueuedProcess.length + savingingQueueManager.enqueuedProcess.length
+          }}
+          <br>
+          <br>downloadingQueueManager :: {{ downloadingQueueManager.denqueuedProcess.length + downloadingQueueManager.enqueuedProcess.length
+          }}
+        </div>
         <div *ngIf="isNetworkAvailable">
           <ion-list>
             <ion-item>
