--- a/src/pages/data-entry/data-entry-indicators/data-entry-indicators.html
+++ b/src/pages/data-entry/data-entry-indicators/data-entry-indicators.html
@@ -24,7 +24,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <div class="item-card" *ngFor="let indicator of indicators">
+        <div class="item-card" *ngFor="let indicator of indicators;trackBy: trackByFn">
           <b>
             <span [translate]="'Name'"></span>
           </b> : {{ indicator.name }}
