--- a/src/pages/data-entry/data-entry-section-selection/data-entry-section-selection.html
+++ b/src/pages/data-entry/data-entry-section-selection/data-entry-section-selection.html
@@ -26,7 +26,7 @@
     <ion-row>
       <ion-col>
         <ion-list>
-          <ion-item *ngFor="let section of sections;let currentIndex = index" (tap)="setSelectedSection(section)">
+          <ion-item *ngFor="let section of sections;let currentIndex = index;trackBy: trackByFn" (tap)="setSelectedSection(section)">
             <img class="side-menu-icon" [src]="icon" />&nbsp;&nbsp;
             <span ion-text [color]="((currentIndex + 1) == pager.page) ?'current' : 'font-color'">{{ section.name }}</span>
           </ion-item>
