--- a/src/pages/event-capture/event-hide-show-column/event-hide-show-column.html
+++ b/src/pages/event-capture/event-hide-show-column/event-hide-show-column.html
@@ -35,7 +35,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-item *ngFor="let dataElement of dataElements">
+          <ion-item *ngFor="let dataElement of dataElements;trackBy: trackByFn">
             <ion-label>{{ dataElement.name }}</ion-label>
             <ion-checkbox [(ngModel)]="selectedItemsModel[dataElement.id]"></ion-checkbox>
           </ion-item>
