--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -46,7 +46,7 @@
         </ion-col>
       </ion-row>
 
-      <div *ngFor="let widget of dashboardWidgets">
+      <div *ngFor="let widget of dashboardWidgets;trackBy: trackByFn">
         <div *ngIf="(isDashboardWidgetOpen[widget.id])">
           <ion-row>
             <ion-col>
@@ -92,7 +92,7 @@
                   </div>
                   <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0">
                     <form>
-                      <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes">
+                      <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes;trackBy: trackByFn">
                         <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
                           [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
                           [mandatory]="programTrackedEntityAttribute.mandatory" (onChange)="updateData($event)"></tracked-entity-inputs>
@@ -127,7 +127,7 @@
               </div>
               <div *ngIf="currentWidget.id != 'enrollment'">
                 <div *ngIf="programStages && programStages.length > 0">
-                  <div *ngFor="let programStage of programStages">
+                  <div *ngFor="let programStage of programStages;trackBy: trackByFn">
                     <div *ngIf="widget.id == programStage.id">
                       <form>
                         <program-stage-tracker-based [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance.id" [currentWidgetIndex]="currentWidgetIndex"
@@ -149,7 +149,7 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets" [disabled]="(isDashboardWidgetOpen[widget.id])"
+          <button ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets;trackBy: trackByFn" [disabled]="(isDashboardWidgetOpen[widget.id])"
             (tap)="changeDashboardWidget(widget)">
             <div [ngClass]=" (isDashboardWidgetOpen[widget.id])?'program-stage-button-label':''">
               <div *ngIf="widget.icon">
