--- a/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
+++ b/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
@@ -37,7 +37,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-item *ngFor="let trackedEntityAttribute of trackedEntityAttributes">
+          <ion-item *ngFor="let trackedEntityAttribute of trackedEntityAttributes;trackBy: trackByFn">
             <ion-label>{{ trackedEntityAttribute.name }}</ion-label>
             <ion-checkbox [(ngModel)]="selectedItemsModel[trackedEntityAttribute.id]"></ion-checkbox>
           </ion-item>
