--- a/src/pages/event-capture/event-capture-register/event-capture-register.html
+++ b/src/pages/event-capture/event-capture-register/event-capture-register.html
@@ -34,7 +34,8 @@
               <br>
             </div>
             <form>
-              <program-stage-event-based [programStage]="programStage" [dataDimension]="dataDimension" [currentEvent]="currentEvent" (onDeleteEvent)="onEventDeleted()"></program-stage-event-based>
+              <program-stage-event-based [programStage]="programStage" (onCancelEvent)="goBack()" [dataDimension]="dataDimension" [currentEvent]="currentEvent"
+                (onDeleteEvent)="onEventDeleted()"></program-stage-event-based>
             </form>
           </ion-col>
         </ion-row>
