Fixing overlapping of contents at botton in tracker dashboard

--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -145,7 +145,7 @@
   </ion-grid>
 </ion-content>
 <ion-footer>
-  <div>
+  <ion-toolbar>
     <ion-grid>
       <ion-row>
         <ion-col>
@@ -163,5 +163,5 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-  </div>
+  </ion-toolbar>
 </ion-footer>
