--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -168,24 +168,26 @@
   </ion-grid>
 </ion-content>
 <ion-footer>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <button ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets;trackBy: trackByFn" [disabled]="(!isTrackedEntityRegistered && widget.iconName) || (isDashboardWidgetOpen[widget.id])"
-          (tap)="changeDashboardWidget(widget)">
-          <div [ngClass]=" (isDashboardWidgetOpen[widget.id])?'program-stage-button-label':''">
-            <div *ngIf="widget.icon">
-              <img class="footer-icon" [src]="widget.icon" />
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <button ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets;trackBy: trackByFn" [disabled]="(!isTrackedEntityRegistered && widget.iconName) || (isDashboardWidgetOpen[widget.id])"
+            (tap)="changeDashboardWidget(widget)">
+            <div [ngClass]=" (isDashboardWidgetOpen[widget.id])?'program-stage-button-label':''">
+              <div *ngIf="widget.icon">
+                <img class="footer-icon" [src]="widget.icon" />
+              </div>
+              <div *ngIf="widget.iconName">
+                <b>{{ widget.iconName }}</b>
+              </div>
             </div>
-            <div *ngIf="widget.iconName">
-              <b>{{ widget.iconName }}</b>
-            </div>
-          </div>
-        </button>
-        <button ion-button clear text-capitalize [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()" float-right>
-          <img class="footer-icon" [src]="icons.addNewCase" />
-        </button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+          </button>
+          <button ion-button clear text-capitalize [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()" float-right>
+            <img class="footer-icon" [src]="icons.addNewCase" />
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
 </ion-footer>
