--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -124,18 +124,23 @@
                       </div>
                     </form>
                   </div>
-                </div>
 
-                <div no-padding>
-                  <div style="display: inline-block;width: 49.3%">
-                    <div float-left>
+                  <div no-padding>
+                    <div style="display: inline-block;width: 49.3%">
+                      <div float-left>
+                        <div class="item-card" color="font-color" (click)="goBack()" padding ion-button clear text-center text-capitalize>
+                          <ion-icon name="ios-arrow-back-outline"></ion-icon>&nbsp;&nbsp;
+                          <span [translate]="'Go back'"></span>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div style="display: inline-block;width: 49.3%">
-                    <div float-right>
-                      <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance)" *ngIf="isTrackedEntityRegistered"
-                        padding ion-button clear text-center text-capitalize>
-                        <ion-icon name="trash"></ion-icon>
+                    <div style="display: inline-block;width: 49.3%">
+                      <div float-right>
+                        <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance)" *ngIf="isTrackedEntityRegistered"
+                          padding ion-button clear text-center text-capitalize>
+                          <span [translate]="'Delete'"></span>&nbsp;&nbsp;
+                          <ion-icon name="trash"></ion-icon>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -145,6 +150,7 @@
                 <div *ngIf="isTrackedEntityRegistered" class="item-card-program-stage-section">
                   <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex + 1)" padding-top padding-bottom
                     ion-button clear text-center text-capitalize>
+                    <span [translate]="'Next'"></span>&nbsp;&nbsp;
                     <ion-icon name="ios-arrow-forward-outline"></ion-icon>
                   </div>
                 </div>
