Add delete and add new event on same level as form as well as lable for next and prev button

--- a/src/pages/option-list-modal/option-list-modal.html
+++ b/src/pages/option-list-modal/option-list-modal.html
@@ -43,9 +43,9 @@
           <ion-icon name="skip-forward"></ion-icon>
         </button>
       </ion-col>
-      <ion-col>
-        <button ion-button outline color="danger" text-capitalize (click)="dismiss()">
-          <ion-icon name='close'></ion-icon>
+      <ion-col col-auto>
+        <button ion-button outline color="danger" text-capitalize (click)="clearValue()">
+          <ion-icon name='trash'></ion-icon>
         </button>
       </ion-col>
     </ion-row>
