--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -125,25 +125,29 @@
                     </form>
                   </div>
 
-                  <div no-padding>
-                    <div style="display: inline-block;width: 49.3%">
+                  <ion-row no-padding>
+                    <ion-col>
                       <div float-left>
                         <div class="item-card" color="font-color" (click)="goBack()" padding ion-button clear text-center text-capitalize>
                           <ion-icon name="ios-arrow-back-outline"></ion-icon>&nbsp;&nbsp;
                           <span [translate]="'Go back'"></span>
                         </div>
                       </div>
-                    </div>
-                    <div style="display: inline-block;width: 49.3%">
+                    </ion-col>
+                    <ion-col col-auto>
                       <div float-right>
+                        <button ion-button clear text-capitalize color="font-color" [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()">
+                          <img class="footer-icon" [src]="icons.addNewCase" />&nbsp;&nbsp;
+                          <span [translate]="'Add'"></span>
+                        </button>&nbsp;&nbsp;
                         <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance)" *ngIf="isTrackedEntityRegistered"
                           padding ion-button clear text-center text-capitalize>
                           <span [translate]="'Delete'"></span>&nbsp;&nbsp;
                           <ion-icon name="trash"></ion-icon>
                         </div>
                       </div>
-                    </div>
-                  </div>
+                    </ion-col>
+                  </ion-row>
                 </div>
 
 
@@ -188,9 +192,6 @@
                 <b>{{ widget.iconName }}</b>
               </div>
             </div>
-          </button>
-          <button ion-button clear text-capitalize [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()" float-right>
-            <img class="footer-icon" [src]="icons.addNewCase" />
           </button>
         </ion-col>
       </ion-row>
