Adding border around add new button on profile register form

--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -136,7 +136,7 @@
                     </ion-col>
                     <ion-col col-auto>
                       <div float-right>
-                        <button ion-button clear text-capitalize color="font-color" [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()">
+                        <button ion-button outline text-capitalize color="font-color" [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()">
                           <img class="footer-icon" [src]="icons.addNewCase" />&nbsp;&nbsp;
                           <span [translate]="'Add'"></span>
                         </button>&nbsp;&nbsp;
