--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -19,7 +19,17 @@
     <div *ngIf="!isLoading">
       <ion-row>
         <ion-col>
-          <div class="item-card" no-padding (click)="openWidgetList()">
+          <div (tap)="goBack()" padding-bottom class="item-card">
+            <b>
+              <span [translate]="'Organisation unit'"></span>
+            </b> : {{ currentOrgUnit.name }}
+            <br>
+            <b>
+              <span [translate]="'Program'"></span>
+            </b> : {{ currentProgram.name }}
+            <br>
+          </div>
+          <div class="item-car-tracker-details-sections" no-padding (click)="openWidgetList()">
             <ion-item no-padding>
               <div ion-text color="font-color" align="center">
                 <div style="padding:6px 0px;">
@@ -55,36 +65,6 @@
                   <div class="inputLabel">
                     <b>
                       <div class="inputLabel">
-                        <span [translate]="'Enrollments'"></span>
-                      </div>
-                    </b>
-                    <hr>
-                  </div>
-                  <div class="inputLabel">
-                    <span [translate]="'Organisation unit'"></span>
-                  </div>
-                  <div class="input-field-container grey-field">
-                    <div padding-left>
-                      <div padding>
-                        {{ currentOrgUnit.name }}
-                      </div>
-                    </div>
-                  </div>
-                  <div class="inputLabel">
-                    <span [translate]="'Program'"></span>
-                  </div>
-                  <div class="input-field-container grey-field">
-                    <div padding-left>
-                      <div padding>
-                        {{ currentProgram.name }}
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="item-card">
-                  <div class="inputLabel">
-                    <b>
-                      <div class="inputLabel">
                         <span [translate]="'Profile'"></span>
                       </div>
                     </b>
@@ -104,7 +84,7 @@
                       <div float-left>
                         <div class="item-card" color="font-color" (click)="goBack()" padding ion-button clear text-center text-capitalize>
                           <ion-icon name="ios-arrow-back-outline"></ion-icon>&nbsp;&nbsp;
-                          <span [translate]="'Go back'"></span>
+                          <span [translate]="'Back'"></span>
                         </div>
                       </div>
                     </div>
