--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -21,7 +21,18 @@
     <div *ngIf="!isLoading">
       <ion-row>
         <ion-col>
-          <div class="item-card" no-padding (click)="openWidgetList()">
+
+          <div (tap)="goBack()" padding-bottom class="item-card">
+            <b>
+              <span [translate]="'Organisation unit'"></span>
+            </b> : {{ currentOrganisationUnit.name }}
+            <br>
+            <b>
+              <span [translate]="'Program'"></span>
+            </b> : {{ currentProgram.name }}
+            <br>
+          </div>
+          <div class="item-car-tracker-details-sections" no-padding (click)="openWidgetList()">
             <ion-item no-padding>
               <div ion-text color="font-color" align="center">
                 <div style="padding:6px 0px;">
@@ -62,26 +73,6 @@
                         </div>
                       </b>
                       <hr>
-                    </div>
-                    <div class="inputLabel">
-                      <span [translate]="'Enrolling organisation unit'"></span>
-                    </div>
-                    <div class="input-field-container grey-field">
-                      <div padding-left>
-                        <div padding>
-                          {{ currentOrganisationUnit.name }}
-                        </div>
-                      </div>
-                    </div>
-                    <div class="inputLabel">
-                      <span [translate]="'Enrolling program'"></span>
-                    </div>
-                    <div class="input-field-container grey-field">
-                      <div padding-left>
-                        <div padding>
-                          {{ currentProgram.name }}
-                        </div>
-                      </div>
                     </div>
                     <div>
                       <div class="inputLabel">
@@ -125,8 +116,8 @@
                     </form>
                   </div>
 
-                  <ion-row no-padding>
-                    <ion-col col-3>
+                  <ion-row no-padding no-margin>
+                    <ion-col>
                       <div float-left>
                         <div class="item-card" color="font-color" (click)="goBack()" padding ion-button clear text-center text-capitalize>
                           <ion-icon name="ios-arrow-back-outline"></ion-icon>&nbsp;&nbsp;
@@ -136,7 +127,7 @@
                     </ion-col>
                     <ion-col col-auto>
                       <div float-right>
-                        <button ion-button outline text-capitalize color="font-color" [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()">
+                        <button ion-button outline text-capitalize color="border-color" [disabled]="!isTrackedEntityRegistered" (click)="resetRegistration()">
                           <img class="footer-icon" [src]="icons.addNewCase" />&nbsp;&nbsp;
                           <span [translate]="'Add new'"></span>
                         </button>&nbsp;&nbsp;
