--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -141,7 +141,13 @@
                     </ion-item>
                     <ion-item no-lines>
                       <ion-label>
-                        <span [translate]="'Show alert on ssignement issues'"></span>
+                        <span [translate]="'Render option less than five as radio'"></span>
+                      </ion-label>
+                      <ion-toggle (ionChange)="applySettings(settingContent)" color="primary" [(ngModel)]="settingObject.entryForm.shouldDisplayAsRadio"></ion-toggle>
+                    </ion-item>
+                    <ion-item no-lines>
+                      <ion-label>
+                        <span [translate]="'Show alert on assignement issues'"></span>
                       </ion-label>
                       <ion-toggle (ionChange)="applySettings(settingContent)" color="primary" [(ngModel)]="settingObject.entryForm.showAlertOnFormAssignement"></ion-toggle>
                     </ion-item>
