Update label for option set count

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -141,7 +141,7 @@
                     </ion-item>
                     <ion-item no-lines>
                       <ion-label>
-                        <span [translate]="'Render option less than five as radio'"></span>
+                        <span [translate]="'Render option less than six as radio'"></span>
                       </ion-label>
                       <ion-toggle (ionChange)="applySettings(settingContent)" color="primary" [(ngModel)]="settingObject.entryForm.shouldDisplayAsRadio"></ion-toggle>
                     </ion-item>
