Change save label to done on save buttons

--- a/src/pages/coordinate-modal/coordinate-modal.html
+++ b/src/pages/coordinate-modal/coordinate-modal.html
@@ -36,7 +36,7 @@
         <div float-right>
           <div class="item-card" color="font-color" (tap)="save()" ion-button clear text-justify>
             <ion-icon name="done-all" color="icon-color"></ion-icon>&nbsp;
-            <span [translate]="'Save'"></span>
+            <span [translate]="'Done'"></span>
           </div>
         </div>
       </ion-col>
