--- a/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
+++ b/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
@@ -46,7 +46,7 @@
       <ion-row>
         <ion-col>
           <button color="primary" round ion-button full (tap)="saveChanges()">
-            <span [translate]="'Save'"></span>
+            <span [translate]="'Done'"></span>
           </button>
         </ion-col>
       </ion-row>
