--- a/src/pages/event-capture/event-hide-show-column/event-hide-show-column.html
+++ b/src/pages/event-capture/event-hide-show-column/event-hide-show-column.html
@@ -44,7 +44,7 @@
       <ion-row>
         <ion-col>
           <button color="primary" round ion-button full (tap)="saveChanges()">
-            <span [translate]="'Save'"></span>
+            <span [translate]="'Done'"></span>
           </button>
         </ion-col>
       </ion-row>
