--- a/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-capture/tracker-entity-register/tracker-entity-register.html
@@ -141,14 +141,13 @@
                         </div>
                         <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance)" padding ion-button
                           clear text-center text-capitalize>
-                          <span color="font-color" [translate]="'Delete'"></span>&nbsp;&nbsp;
-                          <ion-icon name="trash"></ion-icon>
+                          <ion-icon name="trash"></ion-icon>&nbsp;&nbsp;
+                          <span color="font-color" [translate]="'Delete'"></span>
                         </div>
                       </div>
                     </ion-col>
                   </ion-row>
                 </div>
-
 
                 <div *ngIf="isTrackedEntityRegistered" class="item-card-program-stage-section">
                   <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex + 1)" padding-top padding-bottom
