Fixing styles on option set pop up

--- a/src/pages/option-list-modal/option-list-modal.html
+++ b/src/pages/option-list-modal/option-list-modal.html
@@ -44,9 +44,11 @@
         </button>
       </ion-col>
       <ion-col col-auto>
-        <button ion-button outline color="danger" text-capitalize (click)="clearValue()">
-          <ion-icon name='trash'></ion-icon>
-        </button>
+        <div float-right>
+          <button ion-button outline color="danger" text-capitalize (click)="clearValue()">
+            <ion-icon name='trash'></ion-icon>
+          </button>
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
